--- a/src/app/Componentes/gestion-compras/gestion-compras.component.html
+++ b/src/app/Componentes/gestion-compras/gestion-compras.component.html
@@ -5,4 +5,10 @@
     [compra]="compra"/>
 }
 
+<p-paginator
+  (onPageChange)="onPageChange($event)"
+  [first]="first" [rows]="rows"
+  [totalRecords]="totalRecords">
+</p-paginator>
+
 <p-toast />
