--- a/src/app/Componentes/mostrador-compra/mostrador-compra.component.html
+++ b/src/app/Componentes/mostrador-compra/mostrador-compra.component.html
@@ -10,6 +10,9 @@
         <span>
           Precio: {{producto.precio}} Clp.
         </span><br>
+        <span>
+          {{producto.cantidad}}
+        </span><br>
       </div>
       </div>
       @if(eliminable){
