--- a/src/app/Componentes/mostrador-historial/mostrador-historial.component.html
+++ b/src/app/Componentes/mostrador-historial/mostrador-historial.component.html
@@ -13,6 +13,18 @@
         <span>
           {{compra.estado_compra.estado_compra_nombre}}
         </span><br>
+        <span style="font-weight: bold;">
+          Correo usuario:
+        </span>
+        <span>
+          {{compra.usuario.email}}
+        </span><br>
+        <span style="font-weight: bold;">
+          Fono usuario:
+        </span><br>
+        <span>
+          {{compra.usuario.number}}
+        </span><br>
     </div>
       <div style="flex: 1;">
     <p-scrollPanel [style]="{ width: '100%', maxHeight: '250px' }">
