--- a/src/app/Componentes/mostrador-compra/mostrador-compra.component.html
+++ b/src/app/Componentes/mostrador-compra/mostrador-compra.component.html
@@ -8,10 +8,10 @@
           {{producto.nombre}}
         </span><br>
         <span>
-          Precio: {{producto.precio}} Clp.
+          Precio: {{producto.precio * producto.cantidad_seleccionada }} Clp.
         </span><br>
         <span>
-          {{producto.cantidad}}
+          Cantidad: {{producto.cantidad_seleccionada}}
         </span><br>
       </div>
       </div>
