--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,8 @@
 <div style="margin-right: 10px; margin-top: 20px; text-align: center;">
+    <p-card header="Biobío reciclaje spa panel de administración.">
   <p-image
-    src="http://localhost:8000/api/images/Jesus.gif"
+    src="http://localhost:8000/api/images/favicon.svg"
     alt="Image"
-    width="250" />
+    width="650" />
+    </p-card>
 </div>
