Commit de testeo

--- a/src/app/Componentes/gestion-historial-recepcion/gestion-historial-recepcion.component.html
+++ b/src/app/Componentes/gestion-historial-recepcion/gestion-historial-recepcion.component.html
@@ -15,6 +15,18 @@
           {{recepcion.recepcion_estado.recepcion_estado_nombre}}.
         </span><br>
         <span style="font-weight: bold;">
+          Email usuario:
+        </span>
+        <span>
+          {{recepcion.user.email}}
+        </span><br>
+        <span style="font-weight: bold;">
+          Fono usuario:
+        </span>
+        <span>
+          {{recepcion.user.number}}
+        </span><br>
+        <span style="font-weight: bold;">
           Peso aproximado:
         </span>
         <span>
