--- a/src/app/Componentes/mostrador-historial/mostrador-historial.component.html
+++ b/src/app/Componentes/mostrador-historial/mostrador-historial.component.html
@@ -13,6 +13,20 @@
         <span>
           {{compra.estado_compra.estado_compra_nombre}}
         </span><br>
+        @if(compra.compra_garantia){
+        <span style="font-weight: bold;">
+          Garantía:
+        </span>
+        @if(fechaActual < fechaGarantia){
+        <span>
+          Activa hasta {{compra.compra_garantia}}
+        </span><br>
+        }@else {
+        <span>
+          Caduca deste {{compra.compra_garantia}}
+        </span><br>
+        }
+        }
         <span style="font-weight: bold;">
           Correo usuario:
         </span>
