--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div [style]="{ marginLeft:'11%',marginRight:'11%' }">
+<div [style]="mobile ? {} : mobileStyles">
   <app-nav-bar>
   </app-nav-bar>
 <div [style]="{ marginTop:'1%' }">
