--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,8 +1,17 @@
-<div style="margin-right: 10px; margin-top: 20px; text-align: center;">
-    <p-card header="Biobío reciclaje spa panel de administración.">
+@if(mobile){
+<div style="{ margin-right: 10px; margin-top: 20px; text-align: center; }">
+    <p-card header="Biobío Reciclaje Spa panel de administración.">
   <p-image
     src="http://localhost:8000/api/images/favicon.svg"
     alt="Image"
-    width="650" />
+    width="90%" />
     </p-card>
 </div>
+}@else{
+    <p-card header="Biobío Reciclaje Spa panel de administración.">
+  <p-image
+    src="http://localhost:8000/api/images/favicon.svg"
+    alt="Image"
+    width="90%" />
+    </p-card>
+}
