--- a/src/app/Componentes/mostrador-compra/mostrador-compra.component.html
+++ b/src/app/Componentes/mostrador-compra/mostrador-compra.component.html
@@ -2,7 +2,7 @@
   <p-card>
     <div style="display: flex; justify-content: space-between;">
       <div style="display: flex;">
-        <p-image src="http://localhost:8000/api/images/{{producto.imagenUrl}}" alt="Image" height="75" width="75"></p-image>
+        <p-image src="http://api.biobioreciclajes.cl/api/images/{{producto.imagenUrl}}" alt="Image" height="75" width="75"></p-image>
       <div>
         <span style="font-weight: bold;">
           {{producto.nombre}}
