--- a/src/app/Componentes/mostrador-producto/mostrador-producto.component.html
+++ b/src/app/Componentes/mostrador-producto/mostrador-producto.component.html
@@ -1,7 +1,7 @@
 <div style="max-width: 290px;">
   <p-card>
     <div class="flex align-items-center">
-      <p-image  (click)="mostrarDetalles()" src="http://localhost:8000/api/images/{{producto.imagenUrl}}" alt="Image" height="250" width="250"></p-image>
+      <p-image  (click)="mostrarDetalles()" src="http://api.biobioreciclajes.cl/api/images/{{producto.imagenUrl}}" alt="Image" height="250" width="250"></p-image>
     </div>
     <div>
             <span style="font-weight: bold;">
