--- a/src/app/estadisticas-ventas/estadisticas-ventas.component.html
+++ b/src/app/estadisticas-ventas/estadisticas-ventas.component.html
@@ -1,4 +1,10 @@
 <p-card header="Estadisticas">
+  <div style="display: flex; justify-content: right;">
+    <p-button
+      size="small"
+      (click)="downloadChartAsPDF()">Descargar PDF
+      </p-button>
+  </div>
 
   <div style="display: flex; justify-content: space-between;">
     <div class="card flex justify-content-center">
@@ -111,8 +117,10 @@
         </div>
       </div>
     </div>
-    <div style="width: 80%">
+    <div
+      style="width: 80%">
       <p-chart
+        #chart
         type="bar" [data]="data"
         [options]="options" />
         <span>Total de ventas:</span><br>
