--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,7 +2,7 @@
 <div style="{ margin-right: 10px; margin-top: 20px; text-align: center; }">
     <p-card header="Biobío Reciclaje Spa panel de administración.">
   <p-image
-    src="http://localhost:8000/api/images/favicon.svg"
+    src="http://api.biobioreciclajes.cl/api/images/favicon.svg"
     alt="Image"
     width="90%" />
     </p-card>
@@ -10,7 +10,7 @@
 }@else{
     <p-card header="Biobío Reciclaje Spa panel de administración.">
   <p-image
-    src="http://localhost:8000/api/images/favicon.svg"
+    src="http://api.biobioreciclajes.cl/api/images/favicon.svg"
     alt="Image"
     width="90%" />
     </p-card>
