--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,17 +1,25 @@
 @if(mobile){
 <div style="{ margin-right: 10px; margin-top: 20px; text-align: center; }">
-    <p-card header="Biobío Reciclaje Spa panel de administración.">
-  <p-image
-    src="http://api.biobioreciclajes.cl/api/images/favicon.svg"
-    alt="Image"
-    width="90%" />
-    </p-card>
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+    <div><h1>
+        Biobío Reciclaje Spa panel de administración.
+      </h1></div>
+    <div><p-image
+        src="http://api.biobioreciclajes.cl/api/images/favicon.svg"
+        alt="Image"
+        width="90%" /></div>
+  </div>
 </div>
 }@else{
-    <p-card header="Biobío Reciclaje Spa panel de administración.">
-  <p-image
-    src="http://api.biobioreciclajes.cl/api/images/favicon.svg"
-    alt="Image"
-    width="90%" />
-    </p-card>
+<p-card>
+  <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+    <div><h1>
+        Biobío Reciclaje Spa panel de administración.
+      </h1></div>
+    <div><p-image
+        src="http://api.biobioreciclajes.cl/api/images/favicon.svg"
+        alt="Image"
+        width="90%" /></div>
+  </div>
+</p-card>
 }
